--- a/4.html
+++ b/4.html
@@ -7,36 +7,13 @@
 </head>
 <body>
     <script>
-        function Book(title, author, publishedYear) {
-            this.title = title;
-            this.author = author;
-            this.publishedYear = publishedYear;
+        let product ={
+            id:"1",
+            name:"sach",
+            price:"32$",
+            quatily:"3",
         }
-        Book.prototype.displayInfo = function() {
-            console.log("Tiêu đề: " + this.title);
-            console.log("Tác giả: " + this.author);
-            console.log("Năm xuất bản: " + this.publishedYear);
-            console.log("----------------------");
-        };
-        function Library() {
-            this.books = [];
-        }
-        Library.prototype.addBook = function(book) {
-            this.books.push(book);
-        };
-        Library.prototype.displayBooks = function() {
-        for (let i = 0; i < this.books.length; i++) {
-            this.books[i].displayInfo();
-        }
-        };
-        let library = new Library();
-        let book1 = new Book("To Kill a Mockingbird", "Harper Lee", 1960);
-        let book2 = new Book("1984", "George Orwell", 1949);
-        let book3 = new Book("The Great Gatsby", "F. Scott Fitzgerald", 1925);
-        library.addBook(book1);
-        library.addBook(book2);
-        library.addBook(book3);
-        library.displayBooks();
+        console.log(product);
     </script>
 </body>
 </html>
